# ob-project

./: .gitignore  Makefile  default.nix
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Route.hs
common/src/Common/Examples/DataTable/: PackageData.hs
config/common/: route
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/Examples/Benchmark/: Main.hs
frontend/src/Frontend/Examples/DataTable/: Main.hs  Types.hs
frontend/src/Frontend/Examples/SortableList/: Main.hs
static/data/: pdata.json
