name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , dependent-sum
               , obelisk-route
               , mtl
               , dependent-sum
               , text
               , vector
               , time
               , scientific

  exposed-modules:
    Common.Api
    Common.Route
    Common.Examples.WebSocketChat.Message
    Common.Examples.DataTable.PackageData
