name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , array
               , bytestring
               , common
               , containers
               , ghcjs-dom
               , jsaddle
               , obelisk-executable-config
               , obelisk-frontend
               , obelisk-route
               , lens
               , modern-uri
               , reflex
               , reflex-dom
               , obelisk-generated-static
               , reflex-dom-echarts
               , random
               , scientific
               , time
               , vector
               , network-uri
               , unordered-containers
               , dependent-sum
               , text
               , universe
               -- SORTABLE TABLE FROM HEXPLORE
               , bifunctors
               , errors
               , time
               , non-empty-zipper
               , reflex-dom-contrib
               , fuzzy
               , regex-tdfa
               , regex-tdfa-text
               -- SORTABLE LIST
               -- , dependent-sum
               , dependent-map
               , transformers
               , mtl
               -- BENCH
               , ghc-prim
               , prim-uniq
               , primitive
  exposed-modules:
    Frontend
    Frontend.FontAwesome
    Frontend.Head
    Frontend.Home
    Frontend.Nav
    Frontend.Examples.BasicToDo.Main
    Frontend.Examples.DisplayGameUpdates.Main
    Frontend.Examples.DragAndDrop.Main
    Frontend.Examples.FileReader.Main
    Frontend.Examples.NasaPod.Main
    Frontend.Examples.PegSolitaire.Main
    Frontend.Examples.ScreenKeyboard.Main
    Frontend.Examples.TicTacToe.Main
    Frontend.Examples.ECharts.Main
    Frontend.Examples.ECharts.ExamplesData
    Frontend.Examples.WebSocketChat.Main
    Frontend.Examples.WebSocketEcho.Main
    Frontend.Examples.DataTable.Main
    -- Frontend.Examples.Benchmark.Main
    -- Frontend.Examples.SortableList.Main
    Frontend.Examples.DataTable.Types

  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-executable-config
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
